# 2024kh_parents_attendance

./: .dockerignore  .gitignore  AGENTS.md  ChangeLog.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  LLM_ADVANCEMENT.md  LLM_ENGINE_DESIGN.md  README.md  create_venv.sh  docker_build_push.sh  pyproject.toml
app/: .env_example  config.py  main.py
app/agent/: engine.py  llm.py  prompts.py  router.py  tools.py
app/controller/: admin.py  attendee.py  login.py  router.py
app/dao/: admin.py  attendee.py  functions.py  login.py  tables.py
app/service/: admin.py  attendance_data.py  attendance_logic.py  attendee.py  login.py  models.py
app/template/: admin_attendee.html  attendee.html  login.html
app/util/: auth.py  db.py  singleton.py
tests/: conftest.py  test_attendance_data.py  test_attendance_logic.py  test_dao.py  test_engine.py  test_failover.py  test_tools.py
