[tool.poetry]
name = "2024kh-parents-attendance"
version = "0.1.0"
description = ""
authors = ["lyg6772 <lyg6772@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
aiomysql = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
